--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,15 @@
-<p>
-  map works!
-</p>
+<!-- <p>
+  map:
+</p> -->
+<div>
+  <br>
+<agm-map [latitude]="51.673858" [longitude]="7.815982" [backgroundColor]="black">
+  <agm-marker [latitude]="51.673858" [longitude]="7.815982">
+  <agm-snazzy-info-window [isOpen]="true" [latitude]="51.673858" [longitude]="7.815982"  [closeWhenOthersOpen]="true" [pointer]="true">
+    <ng-template>
+      Add venue details here
+    </ng-template>
+  </agm-snazzy-info-window>
+  </agm-marker>
+</agm-map>
+</div>
