--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,27 +1,28 @@
-<!-- <p>
-  map:
-</p> -->
+<html>
+    
+    <agm-map 
+    [latitude]="lat" 
+    [longitude]="lng"
+    [zoom]="zoom"
+    [disableDefaultUI]=false
+    [zoomControl]="false"
+    (mapClick)="mapClicked($event)">
 
-<div>
-<h1>Map</h1>
-<input type="text" [(ngModel)]=cityName>
-<button (click)=serachCity()>Search</button>
-</div>
-<div>
-  <br>
-<agm-map [latitude]="51.673858" [longitude]="7.815982" [backgroundColor]="black">
-  <agm-marker [latitude]="51.673858" [longitude]="7.815982">
-  <agm-snazzy-info-window [isOpen]="true" [latitude]="51.673858" [longitude]="7.815982"  [closeWhenOthersOpen]="true" [pointer]="true">
-    <ng-template>
-      Add venue details here
-    </ng-template>
-  </agm-snazzy-info-window>
-  </agm-marker>
-</agm-map>
-</div> 
-<h1>
-  Weather App
-<hr>
-<input type="text" [(ngModel)]=cityname>
-<button (click)=searchCity()>Search</button>
-</h1>
+      <agm-marker 
+        *ngFor="let m of markers;let i=index"
+        (markerClick)="clickedmarker(m, i)"
+        [latitude]="m.lat" 
+        [longitude]="m.lng"
+        [markerDraggable]="m.draggable"
+        (dragEnd)="markerDragEnd(m, $event)"
+        >
+        
+        <agm-info-window>
+          <strong>{{m.name}}</strong><br/>
+          <strong>{{m.desc}}</strong><br/>
+          <strong><a href={{m.icon}}>{{m.icon}}</a></strong>
+        </agm-info-window>
+      </agm-marker>
+  </agm-map>
+  
+</html>
