--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,17 @@ html, body, app-root .site{
   flex-direction: column;
 }
 
-.mainbody{
+app-center {
   flex: 1;
-  background: url("assets/banner.jpg");
+  width : 100%;
+  height: 100%;
+  background: url("assets/backimg.jpg");
   background-size: cover;
   background-position: center;
+}
+
+agm-map {
+  height: 300px;
 }
 
 .fill-remaining-space{
@@ -25,3 +31,4 @@ html, body, app-root .site{
 .full-width {
   width: 100%;
 }
+
