--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,10 @@
 <html>
+    <ul>
+      <li *ngFor="let m of api_data">
+        <input type="text" placeholder="m.venue_name">
+        {{m.venue_name}} / {{m.lat}} / {{m.lng}}
+      </li>
+    </ul>
     
     <agm-map 
     [latitude]="lat" 
@@ -9,19 +15,17 @@
     (mapClick)="mapClicked($event)">
 
       <agm-marker 
-        *ngFor="let m of markers;let i=index"
-        (markerClick)="clickedmarker(m, i)"
-        [latitude]="m.lat" 
+        *ngFor="let m of api_data;let i=index"
+       
+        [latitude]="m.lat"
         [longitude]="m.lng"
-        [markerDraggable]="m.draggable"
-        (dragEnd)="markerDragEnd(m, $event)"
+        
         >
         
         <agm-info-window>
-          <strong>{{m.name}}</strong><br/>
-          <strong>{{m.desc}}</strong><br/>
-          <strong><a href={{m.icon}}>{{m.icon}}</a></strong>
-        </agm-info-window>
+          <strong>{{m.venue_name}}</strong><br/>
+          
+        </agm-info-window> 
       </agm-marker>
   </agm-map>
   
