Basic Search Implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,16 @@
 <div class="site">
-  <header>
-    <app-header>          
+  
+    <app-header style="height:50px;">          
     </app-header>
-  </header>
+  
+
+  
   <router-outlet>     
   </router-outlet>
-  <app-map></app-map>
-  <footer>
-    <app-footer>     
+  <!-- <app-map></app-map> -->
+ 
+  
+    <app-footer style="height:50px;">     
     </app-footer>
-  </footer> 
+  
 </div>
