--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar style="height:10px;">
   <span class="fill-remaining-space"></span>
   <span class="word"> &copy; Eventplicity. All rights reserved.</span>
   <span class="fill-remaining-space"></span>
