--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,9 @@
-<mat-toolbar color = "primary">
+<mat-toolbar color = "primary" >
   <button mat-button class="word" [routerLink]="['/home']">Map Builder</button>
   <span class="fill-remaining-space"></span>
   <button mat-button class="button" [routerLink]="['/login']">Sign in</button>
   <button mat-button class="button" [routerLink]="['/signup']">Sign up</button>
+  <button mat-button class="button" [routerLink]="['/map']">Map-on-Go</button>
+  
+  
 </mat-toolbar>
