--- a/src/app/core/main/center.component.css
+++ b/src/app/core/main/center.component.css
@@ -79,3 +79,10 @@ span {
 .example-full-width {
   width: 100%;
 }
+
+.perfect-centering {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%,-50%);
+}
