--- a/src/app/signup/signup/signup.component.html
+++ b/src/app/signup/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div>
   <form [formGroup]="signupForm" (submit)=signUp()>
-    <mat-card>
+    <mat-card class="container">
       <mat-card-header>
         <mat-card-title>
           <span color="primary" class="titlePosition">Sign Up</span>
