--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,17 @@
 <div class="site">
-  
-    <app-header style="height:50px;">          
+  <header>
+    <app-header>
+          
     </app-header>
-  
-
-  
-  <router-outlet>     
+  </header>
+  <router-outlet>
   </router-outlet>
-  <!-- <app-map></app-map> -->
+
  
+  <footer>
   
-    <app-footer style="height:50px;">     
+    <app-footer>
+     
     </app-footer>
-  
+  </footer> 
 </div>
