--- a/src/app/core/main/center.component.css
+++ b/src/app/core/main/center.component.css
@@ -29,21 +29,17 @@ span {
 .radio {
   /*margin-left: 30em;*/
   float: right;
-  margin-right: 50%;
+  margin: 5px;
+  margin-right: 47%;
   padding-top: 0.3%;
   padding-bottom: 0.9%;
-  margin-left: 0px ;
-  color: rgb(255, 105, 0);
+  margin-left: 30px ;
+  color: rgb(221, 19, 19);
 }
 
 .mapo {
   /*margin-left: 30em;*/
-  float: right;
-  margin-right: 32%;
-  padding-top: 0.3%;
-  padding-bottom: 0.4%;
-  margin-left: 0px ;
-  color: #FFFFFF;
+  color: rgb(206, 219, 26);
 }
 
 .card {
@@ -57,7 +53,7 @@ span {
 }
 
 .container {
-  margin-top: 40em;
+  margin-top: 20em;
 }
 
 .full-width-field {
@@ -80,9 +76,8 @@ span {
   width: 100%;
 }
 
-.perfect-centering {
-  position: absolute;
-  top: 50%;
-  left:50%;
-  transform: translate(-50%,-50%);
+span {
+  font-family: 'Segoe UI SemiBold';
+  font-size: 14px;
+  color: #fcfcfc;
 }
