--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -1,11 +1,17 @@
-  <div class="mainbody" >   
+<div class="mainbody" >   
   
       <form class="container">
           
-          <md-radio-group layout="row" class="radio" >                             
-          <mat-radio-button ng-click="radioChecked()" ng-app="" ng-controller="Controller" ><b> Search by Location </b></mat-radio-button>
-          <mat-radio-button ng-click="radiounChecked()" ng-app="" ng-controller="Controller"><b> Search by Name </b></mat-radio-button>
-          </md-radio-group>
+                   
+        <mat-radio-group layout="row" class="radio">                            
+          <mat-radio-button value="1" > <span>Search by Location</span></mat-radio-button>
+          <mat-radio-button value="2" > <span>Search by Name </span></mat-radio-button>
+        </mat-radio-group>
+                    
+          <!--
+            <mat-radio-button ng-click="radioChecked()" ng-app="" ng-controller="Controller" >Search by Location </mat-radio-button>
+            <mat-radio-button ng-click="radiounChecked()" ng-app="" ng-controller="Controller"> Search by Name </mat-radio-button>         
+          -->
           
         <mat-card class="card">      
           <mat-card-header></mat-card-header>      
@@ -14,15 +20,15 @@
         <!--<input matInput type="text" placeholder="Location">-->
         <input matInput placeholder="{{placeholder}}" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl" >
         <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let state of filteredStates | async" [value]="state.name">
-              <span>{{ state.name }}</span>          
+          <mat-option *ngFor="let state of all_data" [value]="state.short_name">
+              <span style="color:black;">{{ state.short_name }}</span>          
           </mat-option>
         </mat-autocomplete>
       </mat-input-container>
     </mat-card-content>
     <mat-card-actions></mat-card-actions>
   </mat-card>
-  <button mat-raised-button type="button" class="button" color="primary" [routerLink]="['/map']" [queryParams]="{short_name: short_name}">Search Resturant
+  <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: short_name}">Search Resturant
 </button>
           
 </form> 
