--- a/src/app/login/login/login.component.css
+++ b/src/app/login/login/login.component.css
@@ -30,7 +30,7 @@ div {
 }
 
 .titlePosition {
-  margin-left: 7em;
+  margin-left: 4em;
   font-weight: bold;
   font-size: large;
   color: indigo;
@@ -41,3 +41,6 @@ div {
   color: rgb(255, 255, 255);
 }
 
+.container {
+  margin-top: 13em;
+}
