--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,28 +1,27 @@
 <html>
-    
   
- 
-    <agm-map 
-    [latitude]="lat" 
-    [longitude]="lng"
-    [zoom]="zoom"
-    [disableDefaultUI]=false
-    [zoomControl]="false"
-    (mapClick)="mapClicked($event)">
+<button mat-raised-button color="primary" routerLink="/home"> Back to search</button>  
 
-      <agm-marker 
-        *ngFor="let m of api_data;let i=index"
-       
-        [latitude]="m.lat"
-        [longitude]="m.lng"
+  <agm-map 
+  [latitude]="lat" 
+  [longitude]="lng"
+  [zoom]="zoom"
+  [disableDefaultUI]=false
+  [zoomControl]="false"
+  (mapClick)="mapClicked($event)">
+
+    <agm-marker 
+      *ngFor="let m of api_data;let i=index"
+     
+      [latitude]="m.lat"
+      [longitude]="m.lng"
+      
+      >
+      
+      <agm-info-window>
+        <strong>{{m.venue_name}}</strong><br/>
         
-        >
-        
-        <agm-info-window>
-          <strong>{{m.venue_name}}</strong><br/>
-          
-        </agm-info-window> 
-      </agm-marker>
-  </agm-map>
-  
+      </agm-info-window> 
+    </agm-marker>
+</agm-map>
 </html>
