--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -1,37 +1,49 @@
-<div class="mainbody" >   
-  
-      <form class="container">
-          
-                   
-        <mat-radio-group layout="row" class="radio">                            
-          <mat-radio-button value="1" > <span>Search by Location</span></mat-radio-button>
-          <mat-radio-button value="2" > <span>Search by Name </span></mat-radio-button>
-        </mat-radio-group>
-                    
-          <!--
-            <mat-radio-button ng-click="radioChecked()" ng-app="" ng-controller="Controller" >Search by Location </mat-radio-button>
-            <mat-radio-button ng-click="radiounChecked()" ng-app="" ng-controller="Controller"> Search by Name </mat-radio-button>         
-          -->
-          
-        <mat-card class="card">      
-          <mat-card-header></mat-card-header>      
-          <mat-card-content>         
-            <mat-input-container class="inputWidth">
-        <!--<input matInput type="text" placeholder="Location">-->
-        <input matInput placeholder="{{placeholder}}" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl" >
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option *ngFor="let state of all_data " [value]="state.short_name">
-              <span style="color:black;">{{ state.short_name }}</span>          
-          </mat-option>
-        </mat-autocomplete>
-      </mat-input-container>
-    </mat-card-content>
-    <mat-card-actions></mat-card-actions>
-  </mat-card>
-  <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: short_name}">Search Resturant
-</button>
-          
-</form> 
-    
-</div>
 
+
+<div class="mainbody" >   
+    
+        <form class="container">
+            
+                     
+          <mat-radio-group layout="row" class="radio">                            
+            <mat-radio-button value="1" > <span>Search by Location</span></mat-radio-button>
+            <mat-radio-button value="2" > <span>Search by Name </span></mat-radio-button>
+          </mat-radio-group>
+                      
+            <!--
+              <mat-radio-button ng-click="radioChecked()" ng-app="" ng-controller="Controller" >Search by Location </mat-radio-button>
+              <mat-radio-button ng-click="radiounChecked()" ng-app="" ng-controller="Controller"> Search by Name </mat-radio-button>         
+            -->
+            
+          <mat-card class="card">      
+            <mat-card-header></mat-card-header>      
+            <mat-card-content>         
+              <mat-input-container class="inputWidth">
+          <!--<input matInput type="text" placeholder="Location">-->
+          <input matInput placeholder="{{placeholder}}" aria-label="State" [matAutocomplete]="auto" [formControl]="stateCtrl" >
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let state of all_data " [value]="state.short_name">
+                <span style="color:black;">{{ state.short_name }}</span>          
+            </mat-option>
+          </mat-autocomplete>
+        </mat-input-container>
+      </mat-card-content>
+      <mat-card-actions></mat-card-actions>
+    </mat-card>
+    <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: short_name}">Search Resturant
+  </button>
+            
+  </form> 
+      
+  </div>
+
+
+
+
+<!-- 
+<input type="text"  [formControl]="inputField" placeholder="Search Venues">
+<div *ngFor="let v of search_result">
+  <h4>{{v?.venue_name}}</h4>
+</div>
+<button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: short_name}">Search Resturant
+</button> -->
