--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -29,29 +29,37 @@
 </agm-map>
   </div>
 
+  
   <div *ngIf="visible">
+
       <div *ngFor="let d of api_data;let j=index">
-          <mat-card class="example-card">
-              <mat-card-header>
-                <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title><h2>{{d.venue_name}}</h2></mat-card-title>
+          <div style="width: 100%; display: table;">
+            <div style="display: table-row">
+              <div style="width: 600px; display: table-cell;">
+                <mat-card class="example-card" >
+                  <mat-card-header>
+                    <div mat-card-avatar class="example-header-image"></div>
+                    <mat-card-title><h2>{{d.venue_name}}</h2></mat-card-title>
                 
-              </mat-card-header>
-              <img mat-card-image src="https://cdn.wedding-spot.com/images/venues/9247/101-Steak-Wedding-Atlanta-GA-3_main.1480707976.jpg" alt="venue_pic">
-              <mat-card-content>
-                <p><strong>
-                  {{d.venue_meta.venue_street}}<br>
-                  {{d.venue_meta.venue_city}}<br>
-                  {{d.venue_meta.venue_state}}<br>
-                  {{d.zip}}</strong>
-                </p>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-button>{{d.venue_meta.venue_website}}</button>
+                  </mat-card-header>
+                <img mat-card-image src="https://cdn.wedding-spot.com/images/venues/9247/101-Steak-Wedding-Atlanta-GA-3_main.1480707976.jpg" alt="venue_pic">
+                <mat-card-content>
+                  <p><strong>
+                    {{d.venue_meta.venue_street}}<br>
+                    {{d.venue_meta.venue_city}}<br>
+                    {{d.venue_meta.venue_state}}<br>
+                    {{d.zip}}</strong>
+                  </p>
+                </mat-card-content>
+                <mat-card-actions>
+                  <button mat-button>{{d.venue_meta.venue_website}}</button>
                
-              </mat-card-actions>
-            </mat-card>
-      
+                </mat-card-actions>
+                </mat-card>
+              </div>
+              <div style="display: table-cell;"> Right </div>
+            </div>
+          </div>
       
       
       
