--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -26,3 +26,11 @@ agm-map {
   background-image: url('http://www.101steakatl.com/wp-content/themes/101steak/images/logo.png');
   background-size: cover;
 }
+
+.demo-tab-group {
+  border: 1px solid #e8e8e8;
+}
+
+.demo-tab-content {
+  padding: 16px;
+}
