--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -20,20 +20,20 @@
             <mat-card-content>         
               <mat-input-container class="inputWidth">
           <!--<input matInput type="text" placeholder="Location">-->
-          <input matInput [formControl]="inputField" placeholder="{{placeholder}}">
+          <input matInput [formControl]="inputField" placeholder="{{placeholder}}" #searchvalue value="{{short_name}}">
           
-            <mat-option *ngFor="let v of search_result" (click)="oonEnter($event)">
+            <mat-option *ngFor="let v of search_result" (click)="onclick($event)" [value]="v.short_name">
               
-                <span>{{v?.venue_name}}</span>  
+                <span >{{v?.short_name}}</span>  
                 
                       
             </mat-option>
-          
+         
         </mat-input-container>
       </mat-card-content>
       <mat-card-actions></mat-card-actions>
     </mat-card>
-    <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: short_name}">Search Resturant
+    <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchvalue.value}">Search Resturant
   </button>
             
   </form> 
