--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -6,21 +6,21 @@
             
                      
           <mat-radio-group layout="row" class="radio">                            
-            <mat-radio-button value="1" > <span>Search by Location</span></mat-radio-button>
-            <mat-radio-button value="2" > <span>Search by Name </span></mat-radio-button>
+            <mat-radio-button value="1" (click)="locsearch()"> <span>Search by Location</span></mat-radio-button>
+            <mat-radio-button value="2" (click)="namesearch()"> <span>Search by Name </span></mat-radio-button>
           </mat-radio-group>
                       
             <!--
               <mat-radio-button ng-click="radioChecked()" ng-app="" ng-controller="Controller" >Search by Location </mat-radio-button>
               <mat-radio-button ng-click="radiounChecked()" ng-app="" ng-controller="Controller"> Search by Name </mat-radio-button>         
             -->
-            
+          <div *ngIf="searchbyname">
           <mat-card class="card">      
             <mat-card-header></mat-card-header>      
             <mat-card-content>         
               <mat-input-container class="inputWidth">
           <!--<input matInput type="text" placeholder="Location">-->
-          <input matInput [formControl]="inputField" placeholder="{{placeholder}}" #searchvalue value="{{short_name}}">
+          <input matInput [formControl]="inputField" placeholder="Venue Name" #searchvalue value="{{short_name}}">
           
             <mat-option *ngFor="let v of search_result" (click)="onclick($event)" [value]="v.short_name">
               
@@ -33,9 +33,10 @@
       </mat-card-content>
       <mat-card-actions></mat-card-actions>
     </mat-card>
+    
     <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchvalue.value}">Search Resturant
   </button>
-            
+          </div>      
   </form> 
       
   </div>
