--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -37,6 +37,29 @@
     <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchvalue.value}">Search Resturant
   </button>
           </div>      
+          <div *ngIf="searchbylocation">
+              <mat-card class="card">      
+                <mat-card-header></mat-card-header>      
+                <mat-card-content>         
+                  <mat-input-container class="inputWidth">
+              <!--<input matInput type="text" placeholder="Location">-->
+              <input matInput [formControl]="inputField" placeholder="Enter Zip" #searchvalue value="{{short_name}}">
+              
+                <mat-option *ngFor="let v of search_result" (click)="onclick($event)" [value]="v.short_name">
+                  
+                    <span >{{v?.short_name}}</span>  
+                    
+                          
+                </mat-option>
+             
+            </mat-input-container>
+          </mat-card-content>
+          <mat-card-actions></mat-card-actions>
+        </mat-card>
+        
+        <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchvalue.value}">Search Resturant
+      </button>
+              </div>      
   </form> 
       
   </div>
