--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -6,8 +6,9 @@
             
                      
           <mat-radio-group layout="row" class="radio">                            
-            <mat-radio-button value="1" (click)="locsearch()"> <span>Search by Location</span></mat-radio-button>
             <mat-radio-button value="2" (click)="namesearch()"> <span>Search by Name </span></mat-radio-button>
+            <mat-radio-button value="1" (click)="locsearch()"> <span>Search by Location</span></mat-radio-button>
+            
           </mat-radio-group>
                       
             <!--
@@ -43,11 +44,11 @@
                 <mat-card-content>         
                   <mat-input-container class="inputWidth">
               <!--<input matInput type="text" placeholder="Location">-->
-              <input matInput [formControl]="inputField" placeholder="Enter Zip" #searchvalue value="{{short_name}}">
+              <input matInput [formControl]="zipinputField" placeholder="Enter Location" #searchloc value="{{city_name}}">
               
-                <mat-option *ngFor="let v of search_result" (click)="onclick($event)" [value]="v.short_name">
+                <mat-option *ngFor="let v of zip_search_result" (click)="onlocclick($event)" [value]="v.short_name">
                   
-                    <span >{{v?.short_name}}</span>  
+                    <span >{{v?.venue_meta.venue_city}}</span>  
                     
                           
                 </mat-option>
@@ -57,7 +58,7 @@
           <mat-card-actions></mat-card-actions>
         </mat-card>
         
-        <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchvalue.value}">Search Resturant
+        <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchloc.value}">Search Resturant
       </button>
               </div>      
   </form> 
