--- a/src/app/core/main/center.component.html
+++ b/src/app/core/main/center.component.html
@@ -58,7 +58,7 @@
           <mat-card-actions></mat-card-actions>
         </mat-card>
         
-        <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{short_name: searchloc.value}">Search Resturant
+        <button mat-raised-button type="button" class="button" color="primary" routerLink="/Service/Sign_in" [queryParams]="{city_name: searchloc.value}">Search Resturant
       </button>
               </div>      
   </form> 
