Changed Styling and map behavior

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="site">
-  <header>
+  <header style="height: 50px">
     <app-header>
           
     </app-header>
@@ -8,7 +8,7 @@
   </router-outlet>
 
  
-  <footer>
+  <footer style="height:50px;">
   
     <app-footer>
      
