--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color = "primary">
+<mat-toolbar color = "primary" style="height: 20px">
   <button mat-button class="word" [routerLink]="['/home']">Partner Restaurant</button>
   <span class="fill-remaining-space"></span>
   <button mat-button class="button" [routerLink]="['/login']">Sign in</button>
