--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,6 @@
 
   
-<button mat-raised-button color="primary" routerLink="/home"> Back to search</button>  
+<!-- <button mat-raised-button color="primary" routerLink="/home"> Back to search</button>   -->
 
 
   <div style="height: 50%">
