--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -8,6 +8,6 @@
 .word {
   display: flex;
   color: white;
-  font-size: 25px;
-  font-family: Impact;
+  font-size: 20px;
+  font-family:   sans-serif;
 }
