Service Error for Onboarding Fixed - Fixes #33

--- a/src/app/edit-venue/edit-venue.component.html
+++ b/src/app/edit-venue/edit-venue.component.html
@@ -1,4 +1,4 @@
-<div style="height:600px;">
+ <!-- <div style="height:600px;">
   <mat-horizontal-stepper [linear]="isLinear">
     <mat-step [stepControl]="firstFormGroup">
       <form [formGroup]="firstFormGroup">
@@ -65,4 +65,9 @@
       </div>
     </mat-step>
   </mat-horizontal-stepper>
-  </div>
+  </div> 
+
+  -->
+<div>
+  <h1>Component Rendering</h1>
+</div>
