Dependency updated for Edit-Venue Component

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -15,7 +15,7 @@
     <agm-marker (Click)="markerClicked($event)"
       *ngFor="let m of api_data;let i=index"
      
-      [latitude]="m.lat"
+      [latitude]="m.lt"
       [longitude]="m.lng"
       
       >
