--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -26,6 +26,12 @@
         
       </agm-info-window> 
     </agm-marker>
+    <agm-marker *ngFor="let near of nearby_data;let j=index"
+    [latitude]="near.loc.lt"
+    [longitude]="near.loc.lng"
+    [iconUrl]="'https://cdn0.iconfinder.com/data/icons/isometric-city-basic-buildings/128/restaurant-64.png'">
+
+    </agm-marker>
     
 </agm-map>
 
