--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,6 +1,9 @@
-<mat-toolbar color = "primary" style="height: 20px">
-  <button mat-button class="word" [routerLink]="['/home']">Partner Restaurant</button>
-  <span class="fill-remaining-space"></span>
-  <button mat-button class="button" [routerLink]="['/login']">Sign in</button>
-  <button mat-button class="button" [routerLink]="['/signup']">Sign up</button>
+<mat-toolbar color = "primary">
+  <button mat-button class="word" [routerLink]="['/login']" *ngIf="router.url == '/login'">Partner Restaurant</button>
+  <button mat-button class="word" [routerLink]="['/home']" *ngIf="router.url != '/login' ">Partner Restaurant</button>
+    <span class="fill-remaining-space"></span>
+  <button mat-button class="button" [routerLink]="['/login']" *ngIf="router.url != '/login' && router.url != '/signup' && router.url != '/password' ">Logout</button>
+
+  <!-- <button mat-button class="button" [routerLink]="['/signup']">Sign up</button> -->
 </mat-toolbar>
+ 
