Mapped all venues to their Unique Logo and photo - Fixes #46

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -23,8 +23,9 @@ agm-map {
 
 .example-header-image {
   
-  background-image: url('http://www.101steakatl.com/wp-content/themes/101steak/images/logo.png');
+  /* background-image: url('http://www.101steakatl.com/wp-content/themes/101steak/images/logo.png'); */
   background-size: cover;
+  
 }
 
 .demo-tab-group {
