--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -4,20 +4,20 @@
       <mat-card-header>
         <mat-card-title>
           <span color="primary" class="titlePosition">Sign In</span>
-          <p *ngIf="error">{{error}}</p>
+          <p class="errormessage" *ngIf="error">{{error}}</p>
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <mat-input-container class="full-width">
-          <input matInput type="text" name="username" [(ngModel)]="username" id="loginEmail" placeholder="Email" formControlName="email">
+          <input matInput type="text" id="loginEmail" name="username" [(ngModel)]="username" id="loginEmail" placeholder="Email" formControlName="email">
           <mat-error>Can't be null!</mat-error>
         </mat-input-container>
         <mat-input-container class="full-width">
-          <input matInput type="password" name="password" [(ngModel)]="password" id="loginPassword" placeholder="Password"
+          <input matInput type="password" id="loginPassword" name="password" [(ngModel)]="password" id="loginPassword" placeholder="Password"
           formControlName="password">
           <mat-error>Password should be longer than 8!</mat-error>
         </mat-input-container>
-        <button mat-raised-button type="submit" class="bottonPosition" color="primary" 
+        <button mat-raised-button type="submit" id="loginButton" class="bottonPosition" color="primary" 
         [disabled]="!form.valid" id="loginButton">Log In</button>
       </mat-card-content>
       <mat-card-actions class="text-right">
