--- a/src/app/signup/signup/signup.component.html
+++ b/src/app/signup/signup/signup.component.html
@@ -8,15 +8,15 @@
       </mat-card-header>
       <mat-card-content>
         <mat-input-container class="full-width">
-          <input matInput type="text" placeholder="Email" formControlName="email">
+          <input matInput type="text" id="signupEmail" placeholder="Email" formControlName="email">
         </mat-input-container>
         <mat-input-container class="full-width">
-          <input matInput type="password" placeholder="Password">
+          <input matInput type="password" id="signupPassword" placeholder="Password">
         </mat-input-container>
         <mat-input-container class="full-width">
-          <input matInput type="password" placeholder="Confirm your Password">
+          <input matInput type="password" id="signupconfirmPassword" placeholder="Confirm your Password">
         </mat-input-container>
-        <button mat-raised-button type="button" class="bottonPosition" color="primary">Sign Up</button>
+        <button mat-raised-button type="button" id="signupButton" class="bottonPosition" color="primary">Sign Up</button>
       </mat-card-content>
     </mat-card>
   </form>
